# starfield-outposts

./: README.md  pyproject.toml
data/resources/: Adaptive Frame.json  Aldumite Drilling Rig.json  Aldumite.json  Alkanes.json  Aluminum.json  Antimony.json  Austenitic Manifold.json  Beryllium.json  Bio-suppresant.json  Caesium.json  Cobalt.json  Comm Relay.json  Control Rod.json  Copper.json  Cosmetic.json  Drilling Rig.json  Dysprosium.json  Europium.json  Fiber.json  Gold.json  Indicite Wafer.json  Indicite.json  Ionic Liquids.json  Iron.json  Isocentered Magnet.json  Isotopic Coolant.json  Lithium.json  Lubricant.json  Membrane.json  Memory Substrate.json  Microsecond Regulator.json  Molecular Sieve.json  Mono-propellant.json  Neodymium.json  Nickel.json  Nuclear Fuel Rod.json  Palladium.json  Paramagnon Conductor.json  Plutonium.json  Polymer.json  (+27 more)
src/starfield_outposts/: galaxy.py  outpost.py  resources.py
virtual_env/: pyvenv.cfg
