[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "starfield-outposts"
version = "0.0.1"
authors = [
  { name="Thomas Hughes", email="hughes.thomas.m@gmail.com" },
]
description = "A python library to assist with planning outposts."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tmhughes81/starfield_outposts"
"Bug Tracker" = "https://github.com/tmhughes81/starfield_outposts/issues"
